# chembayes

./: LICENSE  README.md  pyproject.toml  setup.py  test.ipynb  test.py
.github/workflows/: publish.yml
examples/: example.ipynb  optimizer.ipynb  sampler.ipynb  test.ipynb
examples/data/: test_data.csv
src/chembayes/: __init__.py  optimizer.py  sampler.py
