[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chembayes"
version = "0.1.0"
authors = [
  { name="Jesus Alberto Martin del Campo", email="j.a.martin-campo@hotmail.com" },
]
description = "Bayesian optimization with Gaussian Processes for experimental design"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "optuna>=3.0",
    "matplotlib>=3.4",
    "scipy>=1.7",
]

[project.urls]
"Homepage" = "https://github.com/jesusalmartin/chembayes"
"Bug Tracker" = "https://github.com/jesusalmartin/chembayes/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]