[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chembayes"
version = "0.1.5"
authors = [
  { name="Jesus Alberto Martin del Campo", email="j.a.martin-campo@hotmail.com" },
]
# Descripción actualizada para incluir el muestreo experimental
description = "Experimental design and Bayesian optimization with Gaussian Processes and QMC sampling"
readme = "README.md"
requires-python = ">=3.9"
# Se añaden keywords para mejorar la búsqueda del paquete
keywords = ["bayesian-optimization", "gaussian-processes", "experimental-design", "qmc", "sampling", "chemistry"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scikit-learn>=1.7",
    "optuna>=3.0",
    "matplotlib>=3.7",
    "scipy>=1.9",
]

[project.urls]
"Homepage" = "https://github.com/jesusalmartin/chembayes"
"Bug Tracker" = "https://github.com/jesusalmartin/chembayes/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chembayes = ["py.typed"]